--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Відновлення інформаціі (IRS - Львів)</title>
+    <title>Serg Document</title>
     
     <script src="js/jquery-3.3.1.js"></script>
 	<script src="js/my.js"></script>
-	<!-- <script src="js/bootstrap.min.js"></script> -->
+	<script src="js/bootstrap.min.js"></script>
 
-	<link rel="shortcut icon" href="img/.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/fonts.css" />
-	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,18 +21,47 @@
 <div class="container-fluid">
 <div class="row">
 <div class="col logo_cl">
-
+<!--   <img src="img/IRS_full_1.png" alt="" id="logo_id">-->
+<!--   <img src="img/IRS_full_3.png" alt="" id="logo_id"`>-->
+<!--   <img src="img/IRS_full_5.png" alt="" id="logo_id">-->
    <img src="img/IRS_full_last.png" alt="" id="logo_id">
    </div>
    </div>
     
-      <div class="row top_line_menu">
+      <div class="row top_line_menu">   
+<!--<div class="col top_line_left_menu">-->
+<!--
+    <a href="#">File</a>
+    <a href="#">Edit</a>
+    <a href="#">Goto</a>
+-->
+<!--</div>-->
+<!--<div class="col top_line_right_menu">-->
+<!--
+    <a href="#">FaceBook</a>
+    <a href="#">Viber</a>
+-->
+
+<!--</div>-->
 </div>
 
-</div>
+<!--END OF CONTAINER--></div><!--END OF CONTAINER-->
  
-<div class="container">
+<!--CONTAINER--><div class="container"><!--CONTAINER-->
+<!--
+<div class="row top_line_menu">   
+<div class="col top_line_left_menu">
+    <a href="#">File</a>
+    <a href="#">Edit</a>
+    <a href="#">Goto</a>
+</div>
+<div class="col top_line_right_menu">
+    <a href="#">FaceBook</a>
+    <a href="#">Viber</a>
 
+</div>
+</div>
+-->
 
 <br>
     <h3>Вот носители информации из которых мы можем восстановить информацию</h3>
