--- a/index.html
+++ b/index.html
@@ -1,122 +1,152 @@
 <!DOCTYPE html>
 <html lang="ru ua">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Serg Document</title>
-    
-    <script src="js/jquery-3.3.1.js"></script>
-	<script src="js/my.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/my.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>        
+<body>
+
+    <header>
+        <div class="container-fluid">
+            <div class="row bg-primary text-white align-items-center">
+                <div class="col border border-primary text-center ">
+                    <img src="img/irs8.png" alt="" id="logo_id">
+                </div>
+                <div class="col border border-secondary text-center ">
+                    <!-- <p>Information Recovery System</p> -->
+                    <div class="border border-secondary">
+                        <p>Восстановление информации</p>
+                        <p>Ремонт компьютеров</p>
+                    </div>
+
+                </div>
+                <div class="col border border-primary text-center">
+                    <p>т. 23165564546</p>
+                    <p>т. 23165564546</p>
+                    <p>т. 23165564546</p>
+
+                </div>
+            </div>
 
 
-<div class="container-fluid">
-<div class="row">
-<div class="col logo_cl">
-<!--   <img src="img/IRS_full_1.png" alt="" id="logo_id">-->
-<!--   <img src="img/IRS_full_3.png" alt="" id="logo_id"`>-->
-<!--   <img src="img/IRS_full_5.png" alt="" id="logo_id">-->
-   <img src="img/IRS_full_last.png" alt="" id="logo_id">
-   </div>
-   </div>
-    
-      <div class="row top_line_menu">   
-<!--<div class="col top_line_left_menu">-->
-<!--
-    <a href="#">File</a>
-    <a href="#">Edit</a>
-    <a href="#">Goto</a>
--->
-<!--</div>-->
-<!--<div class="col top_line_right_menu">-->
-<!--
-    <a href="#">FaceBook</a>
-    <a href="#">Viber</a>
--->
+        </div>
+    </header>
+    <div class="container">
 
-<!--</div>-->
-</div>
+        <br>
+        <h3>Вот носители информации из которых мы можем восстановить информацию</h3>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/hdd_front_purple_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/SSD_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/transcend_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/External_hdd_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/microSD_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/Samsung_SSD_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-4 brd1px">
+                <div class="div_img"><img src="img/microsd_one_small.png" alt="placeholder+image"></div>
+            </div>
+            <div class="col-8 brd1px col_span">
+                <div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут
+                        рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь
+                        своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div>
+            </div>
+        </div>
+        <br>
 
-<!--END OF CONTAINER--></div><!--END OF CONTAINER-->
- 
-<!--CONTAINER--><div class="container"><!--CONTAINER-->
-<!--
-<div class="row top_line_menu">   
-<div class="col top_line_left_menu">
-    <a href="#">File</a>
-    <a href="#">Edit</a>
-    <a href="#">Goto</a>
-</div>
-<div class="col top_line_right_menu">
-    <a href="#">FaceBook</a>
-    <a href="#">Viber</a>
 
-</div>
-</div>
--->
+    </div>
 
-<br>
-    <h3>Вот носители информации из которых мы можем восстановить информацию</h3>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/hdd_front_purple_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/SSD_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/transcend_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/External_hdd_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/microSD_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/Samsung_SSD_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
-<div class="row">
-<div class="col-4 brd1px">
-<div class="div_img"><img src="img/microsd_one_small.png" alt="placeholder+image"></div>
-</div>
-<div class="col-8 brd1px col_span"><div class="div_span"><span>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Своего большого переулка дал жизни буквенных? Вскоре диких возвращайся семь своего рукопись, сбить. Рыбного точках свой заглавных всемогущая которое ему!</span></div></div>
-</div>
-<br>
+    <footer>
+        <div class="container-fluid cl_footer">
+            <div class="row bg-primary text-white align-items-center">
+                <div class="col border border-black">
+                    <p>Восстановление информации</p>
+                    <p>Ремонт компьютеров</p>
+                </div>
+                <div class="col text-center">
+                    <span>г. Львов, ул. Дудаева, 15</span>
+                </div>
+                <div class="col text-center">
+                    <p>т. 0635555б</p>
+                    <p>т. 0635555б</p>
+                    <span>т. 0635555б</span>
+                </div>
+            </div>
+        </div>
 
- 
-
-<!--CONTAINER--></div><!--CONTAINER-->
+    </footer>
 </body>
+
 </html>
