--- a/index.html
+++ b/index.html
@@ -18,26 +18,42 @@
 
 <body>
 
-    <header>
+    <header class="sticky-top">
         <div class="container-fluid">
-            <div class="row bg-primary text-white align-items-center">
-                <div class="col border border-primary text-center ">
-                    <img src="img/irs8.png" alt="" id="logo_id">
+            <div class="row bg-primary text-white align-items-center  text-white">
+                <div class="col-2 d-none d-md-block text-center ">
+                    <img src="img/Logo IRS/Screenshot_15_yellow.png" width="100" height="100" alt="" id="logo_id">
                 </div>
-                <div class="col border border-secondary text-center ">
+                <div class="col-6 text-center">
                     <!-- <p>Information Recovery System</p> -->
-                    <div class="border border-secondary">
-                        <p>Восстановление информации</p>
-                        <p>Ремонт компьютеров</p>
+                    <div class="d-none d-md-block">
+                        <h3>Відновлення інформації</h3>
+                        <h3>Ремонт комп'ютерів</h3>
+                    </div>
+
+                    <!-- <div class="d-lg-none">
+                        <h4>Відновлення інформації</h4>
+                        <h4>Ремонт комп'ютерів</h4>
+                    </div> -->
+
+                    <div class="d-md-none">
+                        <h6>Відновлення інформації</h6>
+                        <h6>Ремонт комп'ютерів</h6>
                     </div>
 
                 </div>
-                <div class="col border border-primary text-center">
-                    <p>т. 23165564546</p>
-                    <p>т. 23165564546</p>
-                    <p>т. 23165564546</p>
-
+                <div class="col-2 d-none d-lg-block text-right align-items-center bds">
+                    <h6>м. Львів</h6>
+                    <h6>вул. Дудаєва, 15</h6>
+                    
                 </div>
+                <div class="col text-right align-items-center">
+                    <!-- <h6>Контакти</h6> -->
+                    <h6>0677184701</h6>
+                    <h6>2316556454</h6>
+                    <h6>2316556454</h6>
+                </div>
+
             </div>
 
 
